--- a/backend/src/app/views/emails/subscription.hbs
+++ b/backend/src/app/views/emails/subscription.hbs
@@ -1,2 +1,7 @@
 
-<strong>Ola, {{ test }}</strong>
+<strong>Ola, {{ organizer }}!</strong>
+<p>Tem uma nova inscrição na sua meetup {{ meetup }}, caso precise entrar em contato, segue os dados do seu novo inscrito abaixo:</p>
+<p>
+  <strong>Nome:</strong> {{ user }} <br />
+  <strong>Email:</strong> {{ email }} <br />
+</p>
